--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Carta de Cumpleaños</title>
+</head>
+<body>
+    <h1>¡Feliz Cumpleaños! 🎉❤️</h1>
+    <div class="container">
+        <div class="envelope-wrapper">
+            <div class="envelope">
+                <div class="letter">
+                    <div class="text">
+                        <strong>Querida Estrella</strong>
+                        <p>
+                            Hoy celebramos un día muy especial: <strong>tu cumpleaños</strong>. 💖  
+                            No sabes la alegría que me da poder acompañarte y agradecerle a la vida por el regalo más bonito que me dio: <em>tú</em>.  
+                            Eres más brillante que cualquier vela encendida en tu pastel, y cada sonrisa tuya es como un deseo que se cumple en mi corazón.  
+                            Gracias por llenar mis días de ternura, risas y amor infinito.  
+                            Ojalá este nuevo año de vida te traiga tanta felicidad como la que tú me das cada día.  
+                            <br><br>
+                            <strong>Feliz Cumpleaños</strong>, mi amor. Que se cumplan todos tus sueños y que nunca te falten razones para sonreír.  
+                            <br><br>
+                            Con todo mi amor,  
+                            Tu eterno enamorado.  
+                            <br>
+                            <span style="font-size: 0.9em; color: grey;">PD: Si este día fuera un código, la salida sería:</span>  
+                            <br> <code>"Eres y siempre serás mi mejor regalo."</code>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="heart"></div>
+            <div class="tap-right"></div>
+            <div class="tap-left"></div>
+        </div>
+    </div>
+    
+    <script src="script.js"></script>
+</body>
+</html>
+```
 
